# benchstone

./: .gitignore  CLAUDE.md  LICENSE  README.md  arborist-migration-briefing.md  benchmark-harness-implementation-guide.md  pyproject.toml
benchstone/: __main__.py  _background_worker.py  _timefmt.py  api.py  background.py  cli.py  corpus.py  gate.py  jobs.py  manifest.py  paths.py  protocol.py  provenance.py  references.py  registry.py  runner.py  scheduler.py  stats.py  store.py  worktree.py
docs/: design-history.md
tests/: conftest.py  test_api.py  test_background.py  test_cli_e2e.py  test_cli_history.py  test_corpus.py  test_gate.py  test_jobs.py  test_manifest.py  test_protocol.py  test_provenance.py  test_references.py  test_registry.py  test_runner.py  test_scheduler.py  test_shell_project.py  test_stats.py  test_store.py  test_worktree.py
tests/fixtures/fake_project/bench/: benchmarks.py  manifest.toml
tests/fixtures/fake_project/bench/corpus/: fake
tests/fixtures/shell_project/bench/: benchmarks.sh  manifest.toml
