[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchstone"
version = "0.1.0"
description = "Portfolio-wide benchmark harness with append-only results and statistical gating."
requires-python = ">=3.11"
authors = [{ name = "Alan McIntyre" }]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
bench = "benchstone.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["benchstone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error::UserWarning:benchstone.*",
]
